# sett

./: Cargo.toml  main.typ
elab/: Cargo.toml  command.rs  core.rs  diagnostic.rs  elab.rs  lexer.rs  lib.rs  trie.rs  type_id.rs
kernel/: Cargo.toml  expr.rs  kernel.rs  lib.rs  parse.rs  stack.rs  tests.rs
kernel-cli/: Cargo.toml  main.rs
src/: eval.rs  expr.rs  kernel.rs  main.rs  parse.rs  tests.rs
