[package]
name = "minicoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-codegen = "0.102.1"
cranelift-frontend = "0.102.1"
cranelift-jit = "0.102.1"
cranelift-module = "0.102.1"
log = "0.4.20"

[dev-dependencies]
env_logger = "0.10.1"
